--- a/js/grumbles/index.html
+++ b/js/grumbles/index.html
@@ -1,5 +1,8 @@
+<a data-ui-sref="grumbleNew">New Grumble</a>
+
 <h2>These are all the Grumbles</h2>
 
 <div data-ng-repeat="grumble in GrumbleIndexViewModel.grumbles">
-  <p>{{grumble.title}}</p>
+  <p><a data-ui-sref="grumbleShow({id: grumble.id})">{{grumble.title}}</a></p>
+  <a data-ui-sref="grumbleEdit({id: grumble.id})">Edit</a>
 </div>
