--- a/js/grumbles/show.html
+++ b/js/grumbles/show.html
@@ -1,1 +1,6 @@
-<h2>This is a Grumble</h2>
++<h2>{{GrumbleShowViewModel.grumble.title}}</h2>
+ +<p>Author: {{GrumbleShowViewModel.grumble.authorName}}</p>
+ +<p>Created: {{GrumbleShowViewModel.grumble.created_at}}</p>
+ +<blockquote>{{GrumbleShowViewModel.grumble.content}}</blockquote>
+ +
+ +<img data-ng-src="{{GrumbleShowViewModel.grumble.photoUrl}}" src="#" alt="{{GrumbleShowViewModel.grumble.title}}" />
